--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,11 +1,3 @@
-# This workflow will upload a Python Package using Twine when a release is created
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python#publishing-to-package-registries
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Upload Python Package
 
 on:
@@ -16,10 +8,14 @@ permissions:
   contents: read
 
 jobs:
-  deploy:
-
+  pypi-publish:
+    name: Upload release to PyPI
     runs-on: ubuntu-latest
-
+    environment:
+      name: pypi
+      url: https://pypi.org/p/wechatpayv3
+    permissions:
+      id-token: write
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python
@@ -32,14 +28,11 @@ jobs:
         pip install build
     - name: Build package
       run: python -m build
-    - name: Publish package to Test PyPI
-      uses: pypa/gh-action-pypi-publish@v1.8.6
+
+    - name: Publish package distributions to TestPyPI
+      uses: pypa/gh-action-pypi-publish@v1.12.4
       with:
-        user: __token__
-        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
         repository-url: https://test.pypi.org/legacy/
-    - name: Publish package
-      uses: pypa/gh-action-pypi-publish@v1.8.6
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
+
+    - name: Publish package distributions to PyPI
+      uses: pypa/gh-action-pypi-publish@v1.12.4
